# stargus

./: .bzrignore  .gitignore  .travis.yml  Breeze.cpp  Breeze.h  CHANGELOG  CMakeLists.txt  Casc.cpp  Casc.h  Chk.cpp  Chk.h  DataChunk.h  Dds.cpp  Dds.h  Doxyfile  FileUtil.cpp  FileUtil.h  Font.cpp  Font.h  Gfu.cpp  Gfu.h  Grp.cpp  Grp.h  Hurricane.cpp  Hurricane.h  Logger.h  Makefile  Mpq.cpp  Mpq.h  Palettes.cpp  Palettes.h  Panel.cpp  Panel.h  Pcx.cpp  Pcx.h  Png.cpp  Png.h  Preferences.cpp  Preferences.h  README  (+53 more)
.github/workflows/: cmake.yml  macos.yml
Engine/: Makefile  README  Rules.make.in  SConstruct  autogen.sh  configure.in
Engine/contrib/: doxygen-header.html  doxygen-stratagus.cfg
Engine/doc/: ChangeLog.html  development.html  faq.html  index.html  install.html  media.html  metaserver_protocol.txt
Engine/src/: stratagus.rc
Engine/tools/: png2stratagus.cpp  update-images.py
Metaserver/: Stratagus Metaserver.pl
cmake/modules/: FindCascLib.cmake  FindStratagus.cmake
data/: clean.php
data/scripts/: campaigns.lua  cheats.lua  credits.lua  fonts.lua  icons.lua  keystrokes.lua  menus.lua  units.lua  upgrade.lua  widgets.lua
dataset/: dlgs_race.json  palettes.json  units.json
debian/: changelog  config  control  copyright  dirs  docs  install  manpages  menu  postinst  postrm  rules  scmconvert.6  stargus.6  stargus.desktop  startool.6  templates  wrapper
debian/po/: templates.pot
doc/: changelog  iscript.txt  sc_dat_architecture  scmconvert.6  stargus.6  startool.6
mac/: Info.plist  bundle.sh  launchscript.sh
scripts/: ai.lua  anim.lua  buttons.lua  campaigns.lua  cheats.lua  editor.lua  fonts.lua  gameui.lua  guichan.lua  icons.lua  maps.lua  menus.lua  menus.sc.lua  missiles.lua  sc.lua  sound.lua  spells.lua  stratagus.lua  tilesets.lua  tips.lua  ui.lua  units.lua  upgrade.lua  widgets.lua
scripts/RapidStratagusIDE/: RSI_Functions.lua
scripts/ai/: terran.lua  zerg.lua
scripts/menus/: campaign.lua  credits.lua  diplomacy.lua  endscenario.lua  game.lua  help.lua  load.lua  network.lua  objectives.lua  options.lua  replay.lua  results.lua  save.lua
scripts/neutral/: unit-bengalaas-jungle-critter.lua  unit-minerals.lua  unit-ragnasaur-ashworld-critter.lua  unit-rhynadon-badlands-critter.lua  unit-vespene-geyser.lua  units.lua
scripts/protoss/: campaign1.lua  icons.lua  missiles.lua  sound.lua  ui.lua  unit-protoss-arbiter-tribunal.lua  unit-protoss-assimulator.lua  unit-protoss-citadel-of-adun.lua  unit-protoss-cybernetics-core.lua  unit-protoss-dark-templar.lua  unit-protoss-dragoon.lua  unit-protoss-fleet-beacon.lua  unit-protoss-forge.lua  unit-protoss-gateway.lua  unit-protoss-high-templar.lua  unit-protoss-nexus.lua  unit-protoss-observatory.lua  unit-protoss-observer.lua  (+16 more)
src/: AbstractPalette.cpp  AbstractPalette.h  Breeze.cpp  Breeze.h  Casc.cpp  Casc.h  Chk.cpp  Chk.h  Color.cpp  Color.h  Converter.cpp  Converter.h  DataChunk.cpp  DataChunk.h  DataHub.cpp  DataHub.h  Dds.cpp  Dds.h  FileNotFoundException.cpp  FileNotFoundException.h  FileUtil.cpp  FileUtil.h  Font.cpp  Font.h  Gfu.cpp  Gfu.h  Gfx.cpp  Gfx.h  Grp.cpp  Grp.h  Hurricane.cpp  Hurricane.h  ImagesConverter.cpp  ImagesConverter.h  KaitaiConverter.cpp  KaitaiConverter.h  Logger.h  LuaGen.cpp  LuaGen.h  NoValidPaletteException.cpp  (+71 more)
src/DataHub/: DataHub.cpp  DataHub.h  meson.build
src/dat/: CSVExporter.cpp  CSVExporter.h  DataHub.cpp  DataHub.h  Flingy.cpp  Flingy.h  IScript.cpp  IScript.h  Image.cpp  Image.h  ImagesConverter.cpp  ImagesConverter.h  ObjectAccess.h  Order.cpp  Order.h  Portrait.cpp  Portrait.h  PortraitsConverter.cpp  PortraitsConverter.h  PropertyNotAvailableException.cpp  PropertyNotAvailableException.h  Sfx.cpp  Sfx.h  SfxConverter.cpp  SfxConverter.h  Sprite.cpp  Sprite.h  Tbl.cpp  Tbl.h  TblEntry.cpp  TblEntry.h  Techdata.cpp  Techdata.h  Unit.cpp  Unit.h  UnitsConverter.cpp  UnitsConverter.h  Upgrade.cpp  Upgrade.h  Weapon.cpp  (+2 more)
src/kaitai/: Tbl.h  exceptions.h  file_tbl.cpp  file_tbl.h  file_tbl.ksy  flingy_dat.cpp  flingy_dat.h  flingy_dat.ksy  grp_file.cpp  grp_file.h  grp_file.ksy  images_dat.cpp  images_dat.h  images_dat.ksy  iscript_bin.cpp  iscript_bin.h  iscript_bin.ksy  kaitai_generate.sh  kaitaistream.cpp  kaitaistream.h  mapdata_dat.cpp  mapdata_dat.h  mapdata_dat.ksy  meson.build  opcode_list_type.cpp  opcode_list_type.h  orders_dat.cpp  orders_dat.h  orders_dat.ksy  portdata_dat.cpp  portdata_dat.h  portdata_dat.ksy  sfxdata_dat.cpp  sfxdata_dat.h  sfxdata_dat.ksy  sprites_dat.cpp  sprites_dat.h  sprites_dat.ksy  techdata_dat.cpp  techdata_dat.h  (+25 more)
src/libgrp/: libgrp.cpp  libgrp.hpp  meson.build
src/libgrp/Exceptions/: GRPException.cpp  GRPException.hpp
src/libgrp/Exceptions/GRPFrame/: GRPFrameException.hpp
src/libgrp/Exceptions/GRPImage/: GRPImageException.hpp
src/libgrp/GRPFrame/: GRPFrame.cpp  GRPFrame.hpp
src/libgrp/GRPImage/: GRPImage.cpp  GRPImage.hpp
src/tileset/: MegaTile.cpp  MegaTile.h  TiledPaletteImage.cpp  TiledPaletteImage.h  TilesetHub.cpp  TilesetHub.h  meson.build
starinstall/: resource.h  starinstall.cpp  starinstall.dsp  starinstall.dsw  starinstall.h  starinstall.rc  starinstall2Dlg.cpp  starinstall2Dlg.h  starinstallDlg.cpp  starinstallDlg.h
subprojects/: StormLib.wrap  bzip2.wrap
test/gamedata/dat/: CSVExporter.cpp  CSVExporter.h  DatTest.cpp  meson.build
test/lua/: CreateUnitLuaTest.cpp  CreateUnitLuaTest.h  LuaTest.cpp  meson.build
test/module/: BreezeTest.cpp  BreezeTest.h  DataChunkTest.cpp  DataChunkTest.h  PcxTest.cpp  PcxTest.h  StormTest.cpp  StormTest.h  TestHelpers.cpp  TestHelpers.h  TestMain.cpp  TiledPaletteImageTest.cpp  TiledPaletteImageTest.h  luagenTest.cpp  luagenTest.h  meson.build
test/module/data/: PcxTest_red_zergb.pal  PcxTest_red_zergb.pcx  PcxTest_ticon.pcx  PcxTest_ticon_0.pal  PcxTest_ticon_1.pal  PcxTest_ticon_2.pal  PcxTest_ticon_3.pal  PcxTest_ticon_4.pal  PcxTest_ticon_5.pal  StormTest_test1_mpq_txt.mpq  breezetest.txt
tools/: binreader.c  iscript.c  json_transition.cpp  meson.build  tblreader.c  unit_dat.cpp
win-iconv/: CMakeLists.txt  readme.txt
(+356 files in other folders)
