startool_kaitai_dat_sources = files(
	'kaitaistream.cpp',
	'units_dat.cpp',
	'weapons_dat.cpp',
	'file_tbl.cpp',
	'flingy_dat.cpp',
	'sprites_dat.cpp',
	'images_dat.cpp',
	'sfxdata_dat.cpp',
	'portdata_dat.cpp',
	'upgrades_dat.cpp',
	'orders_dat.cpp',
	'techdata_dat.cpp',
	'mapdata_dat.cpp'
)

startool_kaitai_tileset_sources = files(
	'tileset_cv5.cpp',
	'tileset_vf4.cpp',
	'tileset_vr4.cpp',
	'tileset_vx4.cpp',
	'tileset_dddata_bin.cpp'
)

startool_kaitai_sources = startool_kaitai_dat_sources + startool_kaitai_tileset_sources